<resources>
    <string name="app_name">BDRemota22</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Registro</string>
    <string name="menu_slideshow">Consultar</string>
    <string name="menu_tools">Editar/Eliminar</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
