<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ittg.bdremota22.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ittg.bdremota22.ui.registro.RegistroFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_registro" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ittg.bdremota22.ui.slideshow.ConsultarFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_consultar" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.ittg.bdremota22.ui.consultarUsuario.ConsultarUsuarioFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_consultar_usuario" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.ittg.bdremota22.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.ittg.bdremota22.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>